[gd_scene load_steps=5 format=3 uid="uid://cebojxpo6cb2r"]

[ext_resource type="PackedScene" uid="uid://dlr30wgqb2txu" path="res://scenes/player.tscn" id="1_otaxr"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_pwcdi"]
[ext_resource type="PackedScene" uid="uid://cgywxv7ki51nx" path="res://scenes/mob.tscn" id="2_2kowx"]

[sub_resource type="Curve2D" id="Curve2D_1qm8e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 479, -1, 0, 0, 0, 0, 480, 719, 0, 0, 0, 0, 0, 718, 0, 0, 0, 0, 0, -1)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_pwcdi")
mob_scene = ExtResource("2_2kowx")

[node name="Player" parent="." instance=ExtResource("1_otaxr")]

[node name="Timers" type="Node" parent="."]

[node name="MobTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Timers"]

[node name="StartTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_1qm8e")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, -1)

[connection signal="hit" from="Player" to="." method="_game_over"]
[connection signal="timeout" from="Timers/MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_start_timer_timeout"]
